[project]
name = "pantheon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "briefcase>=0.3.23",
    "imageio>=2.37.0",
    "mistralai>=1.8.1",
    "nuitka>=2.7.5",
    "pillow>=11.2.1",
    "pipdeptree>=2.26.1",
    "pyinstaller>=6.13.0",
    "pymupdf>=1.26.0",
    "send2trash>=1.8.3",
    "wxpython>=4.2.3",
]
